# ocaml-matplotlib

./: .merlin  Makefile  README.md  matplotlib.opam
examples/: dune  fig.ml  plot.ml  pyplot.ml
src/matplotlib/: dune  fig_ax.ml  fig_ax.mli  matplotlib.ml  matplotlib.mli  mpl.ml  mpl.mli  pyplot.ml  pyplot.mli
