opam-version: "2.0"
name:         "matplotlib"
bug-reports:  "https://github.com/LaurentMazare/ocaml-matplotlib/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-matplotlib"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-matplotlib.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-j" jobs "@install"]]

install: []
remove:  []

depends: [
  "base" {>= "v0.11.0"}
  "stdio"
  "pyml" {>= "20180530"}
  "dune" {>= "1.4"}
  "ocaml" {>= "4.06"}
]

depopts: [
]

conflicts: [
]

available: [
]

synopsis: "Plotting using Matplotlib through python"
description: """
This provides bindings to Matplotlib for various types of plots using pyml
to interface with python.
"""
